--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -20,10 +20,11 @@
                 </LinearGradientBrush>
             </Menu.Background>
             <MenuItem Header="Spotter" x:Name="MenuItemSpotter" Foreground="White" Click="MenuItemSpotter_Click"></MenuItem>
-            <MenuItem Header="User" Foreground="White">
+            <MenuItem Header="User" Foreground="White" Click="MenuItem_Click">
                 <MenuItem x:Name="MenuItemSignIn" Header="Sign in" Foreground="Black" Click="MenuItemSignIn_Click"/>
                 <MenuItem x:Name="MenuItemRegister" Header="Register" Foreground="Black" Click="MenuItemRegister_Click"/>
                 <MenuItem x:Name="MenuItemProfile" Header="Profile" Foreground="Black" Click="MenuItemProfile_Click"/>
+                <MenuItem x:Name="MenuItemAdmin" Header="Admin" Foreground="Black" />
             </MenuItem>
             <MenuItem Header="Calendar" x:Name="MenuItemCalendar" Foreground="White" Click="MenuItemCalendar_Click"/>
             <MenuItem Header="Details" x:Name="Details" Foreground="White" Click="Details_Click">
