--- a/Spotter_group/Register.xaml
+++ b/Spotter_group/Register.xaml
@@ -70,14 +70,14 @@
             <Label Foreground="#FFE0E0E0" FontSize="20">Gender</Label>
         </StackPanel>
         <StackPanel Grid.Row="2" Grid.Column="3" HorizontalAlignment="Left" VerticalAlignment="Center" Grid.RowSpan="2">
-            <RadioButton x:Name="cbFemale" Foreground="#FFE0E0E0" FontSize="20" Checked="cbFemale_Checked">Female</RadioButton>
-            <RadioButton x:Name="cbMale" Foreground="#FFE0E0E0" FontSize="20" Checked="cbMale_Checked">Male</RadioButton>
+            <RadioButton x:Name="cbFemale" GroupName="gender" Foreground="#FFE0E0E0" FontSize="20" Checked="cbFemale_Checked">Female</RadioButton>
+            <RadioButton x:Name="cbMale" GroupName="gender" Foreground="#FFE0E0E0" FontSize="20" Checked="cbMale_Checked">Male</RadioButton>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center">
             <Label Foreground="#FFE0E0E0" FontSize="20">Start Date</Label>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <DatePicker Name="tbStartDate" Width="100" HorizontalAlignment="Left"></DatePicker>
+            <DatePicker Name="tbStartDate" Width="100" HorizontalAlignment="Left" CalendarClosed="tbStartDate_CalendarClosed"></DatePicker>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="2" HorizontalAlignment="Right" VerticalAlignment="Center">
             <Label Foreground="#FFE0E0E0" FontSize="20">Password</Label>
@@ -96,8 +96,8 @@
         </StackPanel>
 
         <StackPanel Grid.Column="0" Grid.Row="7" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Tone Up</Label>
-            <CheckBox x:Name="cbToneUp" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
+            <TextBlock x:Name="lblToneUP" Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Tone Up</TextBlock>
+            <CheckBox x:Name="cbToneUp" HorizontalAlignment="Center" VerticalAlignment="Bottom" Checked="cbToneUp_Checked"></CheckBox>
         </StackPanel>
         <DockPanel  Grid.Column="0" Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Ursula.png" Height="150px" Width="150px"/>
@@ -105,8 +105,8 @@
             <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Want to become leaner with more muscle definition?  Then this workout routine is for you!  Our <Italic><Bold>Tone UP</Bold></Italic> will help you loose weight and add a little muscle, too!</TextBlock>
         </DockPanel>
         <StackPanel Grid.Column="2" Grid.Row="7" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Gain Muscle</Label>
-            <CheckBox x:Name="cbGainMuslce" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
+            <TextBlock x:Name="lblGain" Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Gain Muscle</TextBlock>
+            <CheckBox x:Name="cbGainMuslce" HorizontalAlignment="Center" VerticalAlignment="Bottom" Checked="cbGainMuslce_Checked"></CheckBox>
         </StackPanel>
         <DockPanel Grid.Column="2" Grid.Row="8" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\snarfsnarf.png" Height="150px" Width="150px"/>
@@ -114,8 +114,8 @@
             <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Want to bulk up?  Become bigger and stronger??  Our <Italic><Bold>Gain Muscle</Bold></Italic> routine will incorporate heavier weights with fewer reps.  This tried and true technique will get your body beach ready!</TextBlock>
         </DockPanel>
         <StackPanel Grid.Column="0" Grid.Row="9" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Lose Weight</Label>
-            <CheckBox x:Name="cbLoseWeight" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
+            <TextBlock x:Name="lblLoseWeight" Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Lose Weight</TextBlock>
+            <CheckBox x:Name="cbLoseWeight" HorizontalAlignment="Center" VerticalAlignment="Bottom" Checked="cbLoseWeight_Checked"></CheckBox>
         </StackPanel>
         <DockPanel Grid.Column="0" Grid.Row="10" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Stimpy.png" Height="125px" Width="150px"/>
@@ -123,8 +123,8 @@
             <TextBlock Foreground="#FFE0E0E0" TextWrapping="Wrap" Margin="40,20,40,0">Use our <Italic><Bold>Lose Weight</Bold></Italic> routine to shed any unwanted pounds!</TextBlock>
             </DockPanel>
         <StackPanel Grid.Column="2" Grid.Row="9" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Cardio</Label>
-            <CheckBox x:Name="cbCardio" HorizontalAlignment="Center" VerticalAlignment="Bottom"></CheckBox>
+            <TextBlock x:Name="lblCardio" Foreground="#FFE0E0E0" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="20">Cardio</TextBlock>
+            <CheckBox x:Name="cbCardio" HorizontalAlignment="Center" VerticalAlignment="Bottom" Checked="cbCardio_Checked"></CheckBox>
         </StackPanel>
         <DockPanel Grid.Column="2" Grid.Row="10" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Image Source="C:\Users\admin\Source\Repos\Spotter_group\Spotter_group\images\Characters\Wile_E_Coyote.png" Height="125px" Width="150px"/>
