--- a/Spotter_group/Workout.xaml
+++ b/Spotter_group/Workout.xaml
@@ -3,10 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:gif="http://wpfanimatedgif.codeplex.com" 
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <!-- Steve, you might want to insert content into stackpanels within the grid as I did on the Nutrition Page, Shane-->
+    <!--the name space is  xmlns:gif, i used NuGet Package Manager to browse 
+    and find a reference added it to the project! if you open references
+    you will see at the bottom wpf animator, feel free to add more stuff, found this stuff
+    really fun -->
+
+    
+    <UserControl.Resources>
+        <XmlDataProvider Source="Data/workit.xml"
+                         XPath="exercise"
+                         x:Key="work"/>
+    </UserControl.Resources>
+
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -27,53 +40,133 @@
         <StackPanel Margin="32,10,48,10" HorizontalAlignment="Stretch" Grid.Column="1" Grid.ColumnSpan="4">
             <Label Grid.Column="4" Foreground="White" HorizontalAlignment="Center" FontSize="25">Working Out</Label>
             <!--<TextBlock x:Name="txtBlock_CaloriesToConsume" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" ToolTip="2000"  Height="150"/>-->
-        </StackPanel>
-        
-        <!-- icon image tag a rooski-->
-        <StackPanel Background="#009999" Grid.Column="1" Grid.Row="1">
-            <Image Source="images/Icons/jumprope.png" Height="65" Width="65" VerticalAlignment="Center" 
-                   HorizontalAlignment="Center" Margin="40"/>
-        </StackPanel>
-        
-        <Image Grid.Column="1" Grid.Row="2" Source="images/Icons/cycle.png" Height="50" Width="50"/>
-        <Image Grid.Column="1" Grid.Row="3" Source="images/Icons/jumprope.png" Height="50" Width="50"/>
-        <Image Grid.Column="1" Grid.Row="4" Source="images/Icons/running.png" Height="50" Width="50"/>
 
-        <!-- text block descript a doodoos-->
-        <TextBlock Margin="20" Grid.Column="2" Grid.Row="1" TextWrapping="Wrap" Name="workout_description_1" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
-        </TextBlock>
-        <TextBlock Margin="20" Grid.Column="2" Grid.Row="2" TextWrapping="Wrap" Name="workout_description_2" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
-        </TextBlock>
-        <TextBlock Margin="20" Grid.Column="2" Grid.Row="3" TextWrapping="Wrap" Name="workout_description_3" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
-        </TextBlock>
-        <TextBlock Margin="20" Grid.Column="2" Grid.Row="4" TextWrapping="Wrap" Name="workout_description_4" Foreground="White" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
-        </TextBlock>
+            <!--workout name-->
+            <TextBlock Margin="20" Grid.Column="2" Grid.Row="1" Grid.ColumnSpan="2"
+                   TextWrapping="Wrap" Name="workout_name" Foreground="White" HorizontalAlignment="Center" 
+                   VerticalAlignment="Top" FontSize="20">
+            </TextBlock>
+
+        </StackPanel>
         
-        <!--exact workout instructions sumption-->
-        <TextBlock Margin="20" Grid.Column="3" Grid.Row="1" TextWrapping="Wrap" Name="workout_instructions_1" Foreground="Wheat" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
+        <!-- some gify fun for the workout page, so feel free to copy the below stuff and add gifs to the GIF folder-->
+        <!-- gif 1 -->
+        <StackPanel Background="Wheat" Grid.Column="1" Grid.Row="1">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/bench-press.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+
+        <!--gif 2-->
+        <StackPanel Background="Wheat" Grid.Column="1" Grid.Row="2">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/jump-rope.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+
+        <!--gif 3-->
+        <StackPanel Background="Wheat" Grid.Column="1" Grid.Row="3">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/tone-up.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+
+            <!--gif 4-->
+        <StackPanel Background="Wheat" Grid.Column="1" Grid.Row="4">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/cardio-run.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+        
+        <!-- gif 5 -->
+        <StackPanel Background="Wheat" Grid.Column="4" Grid.Row="1">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/strength.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+        <!-- gif 6 -->
+        <StackPanel Background="Wheat" Grid.Column="4" Grid.Row="2">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/cardio.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+        <!-- gif 7 -->
+        <StackPanel Background="Wheat" Grid.Column="4" Grid.Row="3">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/buff.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+        <!-- gif 8 -->
+        <StackPanel Background="Wheat" Grid.Column="4" Grid.Row="4">
+            <Image gif:ImageBehavior.AnimatedSource="images/Gifs/arms.gif" Height="200" Width="200" VerticalAlignment="Center" 
+                   HorizontalAlignment="Center"/>
+        </StackPanel>
+
+
+        <!--drop down-->
+        <StackPanel Grid.Column="0" Grid.Row="1">
+            <Label Foreground="Wheat">Please Select</Label>
+            <ComboBox Grid.Column="0" Grid.Row="2" IsReadOnly="True" x:Name="workout_cboBox" 
+                      Margin="5, 10, 5, 10" Height="25" VerticalAlignment="Top" Foreground="Black"
+                      DropDownClosed="workout_cboBox_DropDownClosed"
+                      ItemsSource="{Binding Source={StaticResource work}, XPath=muscle }" 
+                      DisplayMemberPath="name">
+                
+            </ComboBox>
+        </StackPanel>
+
+
+       
+
+
+        <!--machine name-->
+        <TextBlock Margin="20" Grid.ColumnSpan="2" Grid.RowSpan="2"  Grid.Column="2" Grid.Row="1"
+                   TextWrapping="Wrap" Name="machine_name" Foreground="Wheat" HorizontalAlignment="Center" 
+                   VerticalAlignment="Center" FontSize="60">
         </TextBlock>
-        <TextBlock Margin="20" Grid.Column="3" Grid.Row="2" TextWrapping="Wrap" Name="workout_instructions_2" Foreground="Wheat" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
+
+
+        <!--workout instructions-->
+        <TextBlock Margin="20" Grid.Column="2" Grid.Row="3" Grid.ColumnSpan="2" Grid.RowSpan="2" 
+                   TextWrapping="Wrap" Name="workout_instructions"
+                   Foreground="Wheat" HorizontalAlignment="Center" VerticalAlignment="Center" 
+                   FontSize="60">
         </TextBlock>
-        <TextBlock Margin="20" Grid.Column="3" Grid.Row="3" TextWrapping="Wrap" Name="workout_instructions_3" Foreground="Wheat" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
-        </TextBlock>
-        <TextBlock Margin="20" Grid.Column="3" Grid.Row="4" TextWrapping="Wrap" Name="workout_instructions_4" Foreground="Wheat" HorizontalAlignment="Center" VerticalAlignment="Center">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur leo libero, ullamcorper commodo varius sit amet, convallis vitae risus.
-        </TextBlock>
-                   
-        <!--check box a dox-->
-        <CheckBox Grid.Column="4" Grid.Row="1" Name="check_box_1" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
-        <CheckBox Grid.Column="4" Grid.Row="2" Name="check_box_2" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
-        <CheckBox Grid.Column="4" Grid.Row="3" Name="check_box_3" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
-        <CheckBox Grid.Column="4" Grid.Row="4" Name="check_box_4" HorizontalAlignment="Center" VerticalAlignment="Center"></CheckBox>
-    
-        <!-- -->
+
+
+
+        <!-- text block descript a doodoos
+        
+        
+        
+        <muscle>
+		<name>Core - 1</name>
+		<details>Incline Barbell Bench Press</details>
+		<type>2 sets, 6 reps, 80% 1 rep</type>
+	</muscle>
+        
+        
+        
+        
+        hey guys, if you are reading this you have stumbled upon my absolute insanity.
+        i for the life of me can not figure out how to select (or read from another xml file)
+                    1) the program
+                    2) the version
+                    3) the muscle group
+        
+                    all the above is needed to query and  display the following
+        
+                    A) workout name
+                    B) workout instructions
+        
+        
+     i am starting to believe either the format or the logic is becoming to complicated. the nutrition querys are good examples but they
+        dont combine multi binding, additionally i tried looking in the other xml files for what program/version the user selected, maybe read from there.
+        
+        im not sure if i should do multiple combo boxes? this seemed to be  a little more automated, like we wanted this specific xml file to handle everything?
+        
+        im covering my ass with this and just made a simple xml file and query like nutrition, sorry i couldnt get more complicated with this, i spent 
+        over half a day playing around its just not super flush, u can check junk code for all my half ass ideas and trys
+        
+        
+
+-           -->
+
+ 
+     
     
     </Grid>
 </UserControl>
