--- a/Spotter_group/MainWindow.xaml
+++ b/Spotter_group/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <MenuItem x:Name="MenuItemSignIn" Header="Sign in" Foreground="Black" Click="MenuItemSignIn_Click"/>
                 <MenuItem x:Name="MenuItemRegister" Header="Register" Foreground="Black" Click="MenuItemRegister_Click"/>
                 <MenuItem x:Name="MenuItemProfile" Header="Profile" Foreground="Black" Click="MenuItemProfile_Click"/>
-                <MenuItem x:Name="MenuItemAdmin" Header="Admin" Foreground="Black" />
+                <MenuItem x:Name="MenuItemAdmin" Header="Admin" Foreground="Black" Click="MenuItemAdmin_Click" />
             </MenuItem>
             <MenuItem Header="Calendar" x:Name="MenuItemCalendar" Foreground="White" Click="MenuItemCalendar_Click"/>
             <MenuItem Header="Details" x:Name="Details" Foreground="White" Click="Details_Click">
