--- a/Spotter_group/Profile.xaml
+++ b/Spotter_group/Profile.xaml
@@ -6,17 +6,70 @@
              xmlns:local="clr-namespace:Spotter_group"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <StackPanel Margin="30" Width="auto">
-            <Label Foreground ="#FFE0E0E0">First Name</Label>
-            <TextBox IsReadOnly="True" Name="firstNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Foreground ="#FFE0E0E0">First Name</Label>
-            <TextBox IsReadOnly="True" Name="first2NameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Foreground ="#FFE0E0E0" Margin="0,10,0,0">Last Name</Label>
-            <TextBox IsReadOnly="True" Name="lastNameTextBox" Width="100" HorizontalAlignment="Left"></TextBox>
-            <Label Foreground ="#FFE0E0E0" Margin="0,10,0,0">Birthdate</Label>
-            <DatePicker Name="dob" Width="100" HorizontalAlignment="Left"></DatePicker>
-            <Label>Shane label</Label>
-        </StackPanel>
+    <Grid x:Name="gridProfile" Margin="10,15,10,0">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="*"/>
+
+        </Grid.RowDefinitions>
+
+        <Label Grid.Row="0" FontSize="30" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#009999" Grid.ColumnSpan="4">Profile</Label>
+        
+        <TextBlock Grid.Column="0" Grid.Row="1" Foreground ="#FFE0E0E0">Name:</TextBlock>
+        <Label x:Name="lblName" Grid.Column="1" Grid.Row="1" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblName_MouseDoubleClick">stuff to click</Label>
+        <TextBox Visibility="Hidden" x:Name="tbName" Grid.Column="2" Grid.Row="1"></TextBox>
+        
+        
+        <TextBlock Grid.Column="0" Grid.Row="2" Foreground="#FFE0E0E0">Birthdate:</TextBlock>
+        <Label x:Name="lblDOB" Grid.Column="1" Grid.Row="2" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblDOB_MouseDoubleClick">stuff to click</Label>
+        <TextBox Visibility="Hidden" x:Name="tbDOB" Grid.Column="2" Grid.Row="2 "></TextBox>
+
+
+        <TextBlock Grid.Column="0" Grid.Row="3" Foreground ="#FFE0E0E0">Username:</TextBlock>
+        <Label x:Name="lblUsername" Grid.Column="1" Grid.Row="3" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblUsername_MouseDoubleClick">stuff to click</Label>
+        <TextBox Visibility="Hidden" x:Name="tbUsername" Grid.Column="2" Grid.Row="3"></TextBox>
+
+        <TextBlock Grid.Column="0" Grid.Row="4" Foreground="#FFE0E0E0">Weight:</TextBlock>
+        <Label x:Name="lblWeight" Grid.Column="1" Grid.Row="4" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblWeight_MouseDoubleClick">stuff to click</Label>
+        <TextBox Visibility="Hidden" x:Name="tbWeight" Grid.Column="2" Grid.Row="4"></TextBox>
+
+        <TextBlock Grid.Column="0" Grid.Row="5" Foreground ="#FFE0E0E0">Start Date:</TextBlock>
+        <Label x:Name="lblStartDate" Grid.Column="1" Grid.Row="5" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblStartDate_MouseDoubleClick">stuff to click</Label>
+        <TextBox Visibility="Hidden" x:Name="tbStartDate" Grid.Column="2" Grid.Row="5"></TextBox>
+
+        <TextBlock Grid.Column="0" Grid.Row="6" Foreground="#FFE0E0E0">Password:</TextBlock>
+        <Label x:Name="lblPassword" Grid.Column="1" Grid.Row="6" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblPassword_MouseDoubleClick">stuff to click</Label>
+        <TextBox Visibility="Hidden" x:Name="tbPassword" Grid.Column="2" Grid.Row="6"></TextBox>
+
+        <TextBlock Grid.Column="0" Grid.Row="7" Foreground="#FFE0E0E0">Workout:</TextBlock>
+        <Label x:Name="lblWorkout" Grid.Column="1" Grid.Row="7" Foreground="#FFE0E0E0" ToolTip="Double click to edit" MouseDoubleClick="lblWorkout_MouseDoubleClick">stuff to click</Label>
+        <ComboBox x:Name="cbWorkouts" Grid.Column="2" Grid.Row="7" Visibility="Hidden">
+            <ComboBoxItem IsSelected="True">Workouts</ComboBoxItem>
+            <ComboBoxItem>Tone up</ComboBoxItem>
+            <ComboBoxItem>Gain Muscle</ComboBoxItem>
+            <ComboBoxItem>Lose Weight</ComboBoxItem>
+            <ComboBoxItem>Cardio</ComboBoxItem>
+        </ComboBox>
+        <TextBlock Grid.Column="0" Grid.Row="8" Foreground="#FFE0E0E0">Workout goals</TextBlock>
+        <Label Grid.Column="1" Grid.Row="8" Foreground="#ffe0e0e0" MouseDoubleClick="Label_MouseDoubleClick">Please let us a bit about your workout goals!</Label>
+        <TextBox Visibility="Hidden" x:Name="tbGoals" Grid.Column="2" Grid.Row="8"></TextBox>
+
+        <Button Grid.Column="3" Grid.Row="10" Click="Button_Click">Save</Button>
     </Grid>
 </UserControl>
