--- a/Spotter_group/Admin.xaml
+++ b/Spotter_group/Admin.xaml
@@ -11,6 +11,8 @@
         <XmlDataProvider Source="Data/Food.xml"
                          XPath="food_items"
                          x:Key="food"/>
+
+
     </UserControl.Resources>
     <Grid Name="gridAdmin">
         <Grid.ColumnDefinitions>
@@ -27,7 +29,8 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-        <Label Margin="20" Foreground="#009999" Grid.ColumnSpan="3" Grid.Column="1" FontSize="30">Add Food Type</Label>
+        <Label Margin="20" Foreground="#009999" Grid.ColumnSpan="2" Grid.Column="0" FontSize="30">Add Food Type</Label>
+        <Label Margin="20" Foreground="#009999" Grid.ColumnSpan="2" Grid.Column="2" FontSize="30">Update User</Label>
         
         <StackPanel Grid.Row="1" Grid.Column="0" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
             <Label Foreground="White" FontSize="20">Food Type:</Label>
@@ -42,7 +45,6 @@
                 <ComboBoxItem>Alcohol</ComboBoxItem>
                 <ComboBoxItem>Other</ComboBoxItem>
             </ComboBox>
-            
         </StackPanel>
         <StackPanel Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
             <Label Foreground="White" FontSize="20">Name:</Label>
@@ -54,12 +56,33 @@
             <Label Foreground="White" FontSize="20">Calories per serving:</Label>
         </StackPanel>
         <StackPanel Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10">
-            <Button Name="btnAddFood" Height="37" Width="76" Click="btnAddFood_Click">Add Food</Button>
+            <Button Name="btnAddFood" Height="40" Width="80" Click="btnAddFood_Click">Add Food</Button>
         </StackPanel>
         <StackPanel Grid.Row="3" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
             <TextBox Name="txtBoxNewFoodCalories" Width="200px"></TextBox>
         </StackPanel>
 
         
+        <StackPanel Grid.Column="2" Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
+            <Label Foreground="White" FontSize="20">Select User</Label>
+        </StackPanel>
+        <StackPanel Grid.Column="2" Grid.Row="2" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
+            <Label Foreground="White" FontSize="20"></Label>
+        </StackPanel>
+        <StackPanel Grid.Column="2" Grid.Row="3" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
+            <Label Foreground="White" FontSize="20"></Label>
+        </StackPanel>
+        <StackPanel Grid.Column="2" Grid.Row="4" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10">
+            <Label Foreground="White" FontSize="20"></Label>
+        </StackPanel>
+        <StackPanel Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
+            <TextBox Name="txtBox1" Width="200px"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="3" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
+            <TextBox Name="txtBox2" Width="200px"></TextBox>
+        </StackPanel>
+        <StackPanel Grid.Column="3" Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="10">
+            <TextBox Name="txtBox3" Width="200px"></TextBox>
+        </StackPanel>
     </Grid>
 </UserControl>
